--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,10 +28,10 @@ jobs:
       env:
         ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }} 
     - name: Build
-      run: go get fyne.io/fyne/v2@latest
-           go get fyne.io/fyne/app
-           go get fyne.io/fyne/container
-           go get fyne.io/fyne/widget
+      run: go get fyne.io/fyne/v2@latest &&
+           go get fyne.io/fyne/app &&
+           go get fyne.io/fyne/container &&
+           go get fyne.io/fyne/widget &&
            fyne package -os android -appID com.oashalal.app
 
     - name: Upload built apk file
