--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,12 +28,12 @@ jobs:
       env:
         ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }} 
     - name: Build
-      run: export GOBIN=$HOME/bin &&
+      run: export PATH=$PATH:$(go env GOPATH)/ &&
            go get fyne.io/fyne/v2@latest &&
            go get fyne.io/fyne/app &&
            go get fyne.io/fyne/container &&
            go get fyne.io/fyne/widget &&      
-           $GOBIN/fyne package -os android -appID com.oashalal.app
+           fyne package -os android -appID com.oashalal.app
 
     - name: Upload built apk file
       uses: actions/upload-artifact@v3
