--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,7 +28,8 @@ jobs:
       env:
         ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }} 
     - name: Build
-      run: export PATH=$PATH:$(go env GOPATH)/bin && export &&
+      run: export PATH=$PATH:$(go env GOPATH)/bin &&
+           go install fyne.io/fyne/v2/cmd/fyne@latest &&
            go get fyne.io/fyne/v2@latest &&
            go get fyne.io/fyne/app &&
            go get fyne.io/fyne/container &&
